--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,21 +1,30 @@
-<% if @post.errors.any? %>
-  <div class='alert alert-error'>
-  <h5>There were some errors:</h5>
-  <ul>
-    <% @post.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
+<%= render 'shared/errors', obj: @post %>
 
 <%= form_for @post do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :url %>
-  <%= f.text_field :url %>
-  <%= f.label :description %>
-  <%= f.text_area :description, rows: 5 %>
+  <div class="control-group">
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  </div>
+  <div class="control-group">
+    <%= f.label :url %>
+    <%= f.text_field :url %>
+  </div>
+  <div class="control-group">
+    <%= f.label :description %>
+    <%= f.text_area :description, rows: 5 %>
+  </div>
+  
+<!-- 
+  <select name='options[category_ids][]' multiple='multiple'>
+    <option value='1'>Opt 1</option>
+    <option value='2'>Opt 2</option>
+  </select> -->
+  <%= f.label :category_ids, "Categories" %>
+  <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+    <% cb.label(class: "checkbox inline") {cb.check_box(class: "checkbox") + cb.text} %>
+  <% end %>
+
+  <br/>
   <br/>
   <%= f.submit(@post.new_record? ? 'Create Post' : 'Update Post', class: 'btn btn-primary')%>
 <% end %>
