--- a/app/views/shared/_post_title.html.erb
+++ b/app/views/shared/_post_title.html.erb
@@ -1,5 +1,7 @@
 <p>
+  <p>
+    <small><%= link_to 'All Posts', posts_path %> 
+  </p>
   <h2><%= title %></h2>
   <h4><%= link_to(link_title, 'http://' + link_title) %></h4>
-  <hr/>
 </p>
