--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,8 @@
-<p class="pull-right">
-  [<%= link_to('edit this post', edit_post_path(@post)) %>]
-</p>
+<% if logged_in? %>
+  <p class="pull-right">
+    [<%= link_to('edit this post', edit_post_path(@post)) %>]
+  </p>
+<% end %>
 
 <%= render 'shared/post_title', title: @post.title, link_title: @post.url %>
 <%= render @post.categories %>
@@ -10,21 +12,18 @@
 </p>
 <hr>
 
-<h5>Create a comment:</h5>
-<%= render 'shared/errors', obj: @comment %>
-<%= form_for [@post, @comment] do |f| %>
-  <%= f.text_area :body, rows: 5, class: 'span6' %>
-  <br/>
-  <%= f.submit "Create Comment", class: "btn btn-primary" %>
+<% if logged_in? %>
+  <h5>Create a comment:</h5>
+  <%= render 'shared/errors', obj: @comment %>
+  <%= form_for [@post, @comment] do |f| %>
+    <%= f.text_area :body, rows: 5, class: 'span6' %>
+    <br/>
+    <%= f.submit "Create Comment", class: "btn btn-primary" %>
+  <% end %>
 <% end %>
 
 <h5>Comments:</h5>
 
 <% @post.comments.each do |comment| %>
-  <div class="well span8">
-    <em>"<%= comment.body %>"</em>
-    <br/>
-    <span class='quiet'>by</span> <%= comment.creator.username %>
-    <small>at <%= comment.created_at %></small>
-  </div>
+  <%= render 'comments/comment', comment: comment, show_post: false %>
 <% end %>
