--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class='control-group'>
       <%= f.label :password %>
-      <%= f.text_field :password %>
+      <%= f.password_field :password %>
     </div>
     <%= f.submit (@user.new_record? ? "Register" : "Update"), class: 'btn btn-success' %>
   <% end %>
