--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,7 +14,7 @@
     <% Category.all.each do |category| %>
       <li><%= link_to category.name, category_path(category) %></li>
     <% end %>
-    <% if logged_in? %>
+    <% if logged_in? and current_user.admin? %>
       <li class='divider'></li>
       <li>
         <%= link_to(new_category_path) do %>
@@ -57,7 +57,7 @@
   </div>
 <% else %>
   <div class='nav_item'>
-    <%= link_to 'Register', register_path, class: 'btn btn-small' %>
+    <%= link_to 'Register', register_path, class: 'btn btn-small btn-success' %>
   </div>
   <div class='nav_item'>
     <%= link_to 'Log in', login_path, class: 'btn btn-small' %>
